# SynergyGDI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  RefreshDependencies.bat  UpdateClientLib.bat
Dependencies/ClientIncludes/: SynergyClient.h
Dependencies/ClientIncludes/Core/: SynergyCore.h
Dependencies/SynergyClient/: SynergyClient.h  SynergyClientDrawing.h  SynergyClientInput.h  SynergyClientViewport.h
Dependencies/SynergyCore/: SynergyCoreMath.h
Includes/Platform/: Win32_Platform.h
Scripts/: README.md
Scripts/Win32Dev/: CompileClientForHotreload.bat  LaunchSynergyWithHotreload.bat
Sources/: SynergyClientLibLoader.cpp  SynergyMain.cpp  Win32_ClientLibLoader.cpp  Win32_Main.cpp
Sources/Platform/: Win32_ClientLibLoader.cpp  Win32_ClientLibLoader.h  Win32_ClientLibLoader.inc  Win32_ClientLibLoader_INC.cpp  Win32_Drawing.cpp  Win32_Drawing.inc  Win32_Drawing_INC.cpp  Win32_FileManagement_INC.cpp  Win32_Main.cpp  Win32_Platform.h
